Save progress, Writing 06.01

--- a/Refactoring/06.01. Factory Method.md
+++ b/Refactoring/06.01. Factory Method.md
@@ -13,6 +13,30 @@
 그 이후, 당신의 어플리케이션은 꽤 유명해졌다. 당신은 매일 해양수송 회사로부터 해양물류에 관한 기능을 앱에 포함시키기 위해 하루에도 12가지 요구사항을 받고 있다.
 
 ![](https://refactoring.guru/images/patterns/diagrams/factory-method/problem1.png)
+> *기존의 코드들이 이미 기존의 클래스에 결합되어 있기 때문에 새로운 클래스를 프로그램에 새로 추가하는 것은 결호 쉽지 않다.*
 
-> *Adding a new class to the program isn’t that simple if the rest of the code is already coupled to existing classes.*
->
+좋은 소식이지만, 당신의 코드는 어떠한가? 현재, 당신의 코드의 대부분은 `Truck` 클래스와 결합되어 있다. `Ship` 클래스를 당신의 프로그램에 추가하기 위해서는 전체 코드의 틀을 수정해야한다. 더 나아가, 당신이 새로운 클래스를 물류 관리 앱에 또 추가하고자자 한다면, 아마도 이 전체 과정을 다시 해야할 것이다.
+
+결과적으로, 당신은 수송 객체의 타입에 따라 앱의 동작을 바꿔야하는 조건문들로 가득차 있는 아주 끔찍한 코드를 갖게 될 것이다.
+
+### Solution
+
+팩토리 메소드 패턴은 객체생성을 위한 직접적인 호출(`new` 오퍼레이터) 대신에특수한 `factory` 메소드 호출로 대체하는 것을 제안한다.
+대체하더라도, 그 객체들은 `factory` 메소스 내에서 호출되면서, 여전히 `new` 오퍼레이터를 통해 생성될 것이니 걱정은 말자. `factory` 메소드에 의해 반환되는 객체들은 종종 "Products"라고 부른다.
+
+![Factory-Method_Solution01](https://refactoring.guru/images/patterns/diagrams/factory-method/solution1.png)
+> *자식 클래스는 `factory` 메소드에 의해 반환되는 객체의 클래스를 바꿀 수 있다.*
+
+언뜻 보기에, 이러한 변화는 무의미해 보일지도 모른다: 우리는 단순히 프로그램의 일부에서 다른 일부로 생성자 호출을 옮겼다. 그러나, 이제 하위 클래스의 `factory` 메소드를 재정의하고 이 방법으로 생성되는 제품 클래스를 변경할 수 있다. 그러나, 아래 사항을 주목하자: 이제 당신은 자식 클래스의 멤버인 팩토리 메소드를 오버라이드(Overried) 할 수 있고, 오버 라이드한 메소드를 통해 반환되는 클래스 타입을 바꿀 수 있다.
+
+그렇지만 이런 과정에도 약간의 제약사항이 있다: `factory` 메소드로 반환되는 객체들은 서로 공통된 기본 클래스 또는 인터페이스를 지녀야만 자식 클래스는 반환되는 객체의 타입을 바꿀 수 있다. 또, 기본 클래스의 팩토리 메소드는 인터페이스로써 정의된 반환될 클래스 타입을 지녀야 한다.
+
+![Factory-Method_Solution02](https://refactoring.guru/images/patterns/diagrams/factory-method/solution2-en.png)
+> *모든 반환 객체는 반드시 동일한 인터페이스를 지녀야 한다*
+
+예를 들어, `Truck`과 `Ship` 클래스들은 `deliver` 메소드를 정의하고 있는 `Transport` 인터페이스를 구현해야 한다. 각 각의 클래스들은 서로 다르게 이 `deliver` 메소드를 다르게 구현한다: 트럭(truck)은 화물을 육지를 통해 이송하고, 배(Ship)의 경우 화물을 해상으로 이송한다. `RoadLogisticcs` 클래스의 팩토리 메소드인 `deliver` 메소드는 `truck` 객체들를 반환하고, 반면에 `SeaLogistics` 클래스의 팩토리 메소드는 `ship` 객체들을 반환한다.
+
+![Factory-Method_Solution03](https://refactoring.guru/images/patterns/diagrams/factory-method/solution3.png)
+> *모든 자식 클래스가 공통 인터페이스를 구현하면, 당신은 그것의 객체의 코드를 보존한채 클라이언트 코드에 전달할 수 있다.*
+
+---
