Save progress, Writing 06.01

--- a/Refactoring/06.01. Factory Method.md
+++ b/Refactoring/06.01. Factory Method.md
@@ -22,7 +22,7 @@
 ### Solution
 
 팩토리 메소드 패턴은 객체생성을 위한 직접적인 호출(`new` 오퍼레이터) 대신에특수한 `factory` 메소드 호출로 대체하는 것을 제안한다.
-대체하더라도, 그 객체들은 `factory` 메소스 내에서 호출되면서, 여전히 `new` 오퍼레이터를 통해 생성될 것이니 걱정은 말자. `factory` 메소드에 의해 반환되는 객체들은 종종 "Products"라고 부른다.
+대체하더라도, 그 객체들은 `factory` 메소스 내에서 호출되면서, 여전히 `new` 오퍼레이터를 통해 생성될 것이니 걱정은 말자. `factory` 메소드에 의해 반환되는 객체들은 종종 "Products"라고 부른다.[1]
 
 ![Factory-Method_Solution01](https://refactoring.guru/images/patterns/diagrams/factory-method/solution1.png)
 > *자식 클래스는 `factory` 메소드에 의해 반환되는 객체의 클래스를 바꿀 수 있다.*
@@ -39,4 +39,17 @@
 ![Factory-Method_Solution03](https://refactoring.guru/images/patterns/diagrams/factory-method/solution3.png)
 > *모든 자식 클래스가 공통 인터페이스를 구현하면, 당신은 그것의 객체의 코드를 보존한채 클라이언트 코드에 전달할 수 있다.*
 
+팩토리 메소드를 사용하는 코드(클라이언트 코드)는 다양한 자식 클래스로부터 실제 반환되는 실제 반환 객체에 따라 차이를 보이지 않는다. 클라이언트 코드는 모든 반환 객체들을 인터페이스 객체인 `Transport`로 취급한다. 클라이언트 코드는 모든 `Transport` 객체들이 `deliver` 메소드를 포함하고 있는 것을 알고 있지만, 그 객체들이 구체적으로 어떻게 동작하는지는 클라이언트에게 중요하지 않다.  
+
+### Structure
+
+![Structure-Indexed](https://refactoring.guru/images/patterns/diagrams/factory-method/structure-indexed.png)  
+
+ 1. 객체를 생산하는 클래스(`Creator`)와 그 자식 클래스로부터 생성되는 모든 객체들을 **반환 객체**를 선언한다.  
+ 2. **구체적인 반환 객체**들의 인터페이스 구현은 다르게 되어있다.  
+ 3. `Creator` 클래스는 새로운 반환 객체들을 반환하는 팩토리 메소드를 선언한다. 이때, 팩토리 메소드의 반환값의 데이터 타입이 반환 객체 인터페이스와 동일하다는 것이 중요하다. 우리는 
+ 4. 
+
 ---
+
+[1] 원문 내에서 "반환 객체" 용어에 대해 "Product"라고 표현하고 있다. 국문으로 어감이 맞는 단어를 찾지 못하여 모두 반환 객체로 표기하였다. 
